# SonySim

./: .gitignore  CMakeLists.txt  Command.cpp  Command.h  CommandClient.cpp  CommandClient.h  CommandServer.cpp  CommandServer.h  CommandSleep.cpp  CommandSleep.h  CommandVar.cpp  CommandVar.h  CommandWhile.cpp  CommandWhile.h  Condition.cpp  Condition.h  Dummy.h  FloatFromString.cpp  FloatFromString.h  FloatFromStringExpression.cpp  FloatFromStringExpression.h  GECondition.cpp  GECondition.h  GeneralData.h  GlobalVars.h  Lexer.cpp  Lexer.h  Link To GitHub.txt  MeetingsSummery.txt  Parser.cpp  Parser.h  README.md  SetGlobalVars.h  SymbolTable.cpp  SymbolTable.h  UpdateSimulatorQueue.cpp  UpdateSimulatorQueue.h  VarCommand.cpp  VarCommand.h  VarData.cpp  (+9 more)
Commands/: Command.h  CommandClient.cpp  CommandClient.h  CommandComment.cpp  CommandComment.h  CommandFuncCall.cpp  CommandFuncCall.h  CommandFuncDef.cpp  CommandFuncDef.h  CommandIF.cpp  CommandIF.h  CommandPrint.cpp  CommandPrint.h  CommandServer.cpp  CommandServer.h  CommandSleep.cpp  CommandSleep.h  CommandVar.cpp  CommandVar.h  CommandWhile.cpp  CommandWhile.h
Conditions/: Condition.cpp  Condition.h  ConditionEqual.cpp  ConditionEqual.h  ConditionFactory.cpp  ConditionFactory.h  ConditionGE.cpp  ConditionGE.h  ConditionGreater.cpp  ConditionGreater.h  ConditionLE.cpp  ConditionLE.h  ConditionLess.cpp  ConditionLess.h  ConditionNE.cpp  ConditionNE.h
DataManagement/: FloatFromString.h  GeneralData.h  Lexer.cpp  Parser.cpp  SetGlobalVars.h  SymbolTable.h  VarData.h
Expression/: Interpreter.cpp  Interpreter.h  Minus.h  (+5 more)
(+21 files in other folders)
